updated the Email and Password

--- a/firebase.json
+++ b/firebase.json
@@ -2,5 +2,35 @@
   "functions": {
     "source": "functions",
     "runtime": "nodejs20"
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+
+    "headers": [
+      {
+        "source": "/sitemap.xml",
+        "headers": [
+          { "key": "Content-Type", "value": "application/xml" }
+        ]
+      },
+      {
+        "source": "/robots.txt",
+        "headers": [
+          { "key": "Content-Type", "value": "text/plain" }
+        ]
+      }
+    ],
+
+    "rewrites": [
+      {
+        "source": "!{/sitemap.xml,/robots.txt}",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
